# rag_ai

./: README.md  app.py  main.py  milvus_demo.db  pyproject.toml  rag_engine.py  retrieval_augmented_generation_with_llamaindex.py
data/: colosseum.txt  eiffel_tower.txt  great_wall.txt  practical driving test
