[project]
name = "rag-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-vector-stores-milvus>=0.9.4",
    "numpy>=2.2.6",
    "pydantic-ai-slim[outlines-vllm-offline]>=1.37.0",
    "pymilvus[milvus-lite]>=2.6.5",
    "sentence-transformers>=5.2.0",
    "vllm>=0.13.0",
]
